<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bottom_sheet_dialog_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/close" />

    <Button
        android:id="@+id/close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        app:icon="@drawable/ic_close"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconTint="@color/scarpa_flow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dlt_text_please_enter_the_match_details"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg" />

    <View
        android:id="@+id/firstDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/trout"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/firstPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:hint="@string/dlg_text_player_name"
        android:inputType="text"
        android:lines="1"
        android:maxLength="10"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstDivider" />

    <EditText
        android:id="@+id/firstPlayerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/dlg_text_player_score"
        android:inputType="numberSigned"
        android:lines="1"
        android:maxLength="3"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstDivider" />

    <View
        android:id="@+id/secondDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/trout"
        app:layout_constraintTop_toBottomOf="@+id/firstPlayerName" />

    <EditText
        android:id="@+id/secondPlayerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:hint="@string/dlg_text_player_name"
        android:inputType="text"
        android:lines="1"
        android:maxLength="10"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondDivider" />

    <EditText
        android:id="@+id/secondPlayerScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/dlg_text_player_score"
        android:inputType="numberSigned"
        android:lines="1"
        android:maxLength="3"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secondDivider" />

    <View
        android:id="@+id/thirdDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/trout"
        app:layout_constraintTop_toBottomOf="@+id/secondPlayerName" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveResults"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginBottom="48dp"
        android:background="@color/heliotrope"
        android:text="@string/dlg_text_save_results"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>